--- a/.env
+++ b/.env
@@ -1,18 +1,7 @@
 
-
-# URLLOGIN=http://3.147.193.70:8081/api/Login
-# URLBASE=http://3.147.193.70:8081/api
-# NEXT_PUBLIC_SIGNALR_URL=http://3.147.193.70:8081
-# URLLOGIN=http://host.docker.internal:8081/api/Login
-# URLBASE=http://host.docker.internal:8081/api
-URLLOGIN=http://localhost/api/Login
-URLBASE=http://localhost/api
-# NEXT_PUBLIC_SIGNALR_URL=http://localhost
-
+# DATABASE_URL="mysql://avnadmin:AVNS_m2qIUlLKAuUJhDFMMu9@reserva-erickjosepineda33-1f0d.i.aivencloud.com:10168/defaultdb"
 
 
 AUTH_SECRET=YHLQMDLGzZ4pW9t2uFj8XQ1kNz5yJmD8L
 RESEND_API_KEY=rre_imGup3de_EXycsLmh2mThQ1kZZFYzCkZ4
-
-# Variables públicas para el frontend
-
+DATABASE_URL="mysql://root:P@ssWord.123@localhost:3306/AutoGestion_DB"
