--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@prisma/nextjs-monorepo-workaround-plugin": "^6.8.2",
     "@types/file-saver": "^2.0.7",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
