--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "lucide-react": "^0.487.0",
     "motion": "^12.5.0",
     "next": "14.2.22",
+    "next-rate-limit": "^0.0.3",
     "next-themes": "^0.4.6",
     "prop-types": "^15.8.1",
     "react": "^18",
