--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "next": "14.2.22",
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -59,6 +60,7 @@
     "@types/file-saver": "^2.0.7",
     "@types/jspdf": "^1.3.3",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
