--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "html5-qrcode": "^2.3.8",
     "jose": "^5.9.6",
+    "jsbarcode": "^3.12.0",
     "lucide-react": "^0.487.0",
     "motion": "^12.5.0",
     "next": "14.2.22",
