--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "nodemailer": "^7.0.3",
     "prop-types": "^15.8.1",
     "react": "^18",
+    "react-barcode": "^1.6.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
