--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "html5-qrcode": "^2.3.8",
     "jose": "^5.9.6",
     "jsbarcode": "^3.12.0",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
     "motion": "^12.5.0",
     "next": "14.2.22",
