cron email report analityc

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "file-saver": "^2.0.5",
+    "googleapis": "^156.0.0",
     "html5-qrcode": "^2.3.8",
     "jose": "^5.9.6",
     "jsbarcode": "^3.12.0",
