--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next-rate-limit": "^0.0.3",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
+    "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^18",
     "react-barcode": "^1.6.1",
