--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,46 +1,18 @@
 version: "3.9"
 
 services:
-  db:
-    image: mariadb:11
-    container_name: mi_mariadb
-    restart: unless-stopped
-    env_file:
-      - .env
-    # No publicar 3306 al host para mayor seguridad; comentar si necesitas acceso directo:
-    # ports:
-    #   - "3306:3306"
-    mem_limit: 1024m
-    volumes:
-      - db_data:/var/lib/mysql
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
-
   web:
     build: .
     container_name: nextjs_app
     restart: unless-stopped
     env_file:
       - .env
-    ports:
-      - "3000:3000"
+    # Con host networking el contenedor usa la red del host (localhost = host)
+    network_mode: "host"
     mem_limit: 1536m
-    depends_on:
-      db:
-        condition: service_healthy
-    # Montar .env y/o volúmenes si lo deseas:
-    # volumes:
-    #   - ./.next:/app/.next   # opcional si haces build en host
-    #   - ./.env:/app/.env     # opcional, pero usamos env_file ya
+    restart: unless-stopped
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
-
-volumes:
-  db_data:
