--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "html5-qrcode": "^2.3.8",
     "jose": "^5.9.6",
     "jsbarcode": "^3.12.0",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.487.0",
@@ -63,6 +64,8 @@
     "react-day-picker": "^9.7.0",
     "react-dom": "^18",
     "react-hook-form": "^7.55.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
