--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "date-fns-tz": "^3.2.0",
     "file-saver": "^2.0.5",
     "googleapis": "^156.0.0",
     "html5-qrcode": "^2.3.8",
